2005-05-25  Kjartan Maraas  <kmaraas@gnome.org>

	* audio_alsa09.c: (print_state):
	* clients.c: (dump_clients):
	* esdctl.c: (main):
	* esddsp.c: (mmapemu_flush), (munmap):
	* esdplay.c: (main):
	* mix.c: (get_translate_func), (refresh_mix_funcs):
	* players.c: (dump_players):
	* proto.c: (poll_client_requests):
	* samples.c: (dump_samples):
	* util.c: (have_ipv6): Clean up warnings reported by sparse

2005-05-25  David Schleef  <ds@schleef.org>

	* audio_alsa09.c: Patch from Takashi Iwai. Writes to alsa
	  more carefully. (bug #140803)

2005-05-25  David Schleef  <ds@schleef.org>

	* esdfile.c: (esd_play_file): Disable compressed audio, since
	audiofile doesn't play it correctly.  (bug #107483)

2005-01-18  David Schleef  <ds@schleef.org>

	* acconfig.h: remove
	* autogen.sh: use m4/ directory for aclocal

2005-01-17  David Schleef  <ds@schleef.org>

	Patch from igor@avtomir.ru (Igor Mokrushin)

	* audio_arts.c: New backend (bug #82154)
	* esd.c: (main):

2005-01-17  David Schleef  <ds@schleef.org>

	* Makefile.am: update for modern automake/autoconf
	* audio.c: make ALSA-1.0 the default driver
	* configure.ac: update for modern automake/autoconf
	* configure.in: remove
	* m4/as-arts.m4: (new) arts detection

2004-11-23  David Schleef  <ds@schleef.org>

	* docs/esd-config.1.in: Remove word break. (bug #158839, fix
	from Miloslav Trmac)

2004-08-12  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in:
	* NEWS
	Release 0.2.35

2004-08-12  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* audio_alsa09.c:
	Use Alsa default alias when no card is specified (bug #144318,
	original fix from Cyrille Chepelov)

2004-08-12  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* .cvsignore:
	Quiet CVS.

	* docs/esd.1.in:
	* esd.c: (main):
	* esd.conf:
	* esd_config.c: (esd_config_read), (esd_config_read_file):
	Fix regression caused by patch for bug #118230 (bug #147293).
	Add new default options in configuration file and as environment